--- a/ProjectIKS/src/app/modules/layout/unregistered-user-navbar/unregistered-user-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/unregistered-user-navbar/unregistered-user-navbar.component.html
@@ -1,1 +1,7 @@
-<p>unregistered-user-navbar works!</p>
+<mat-toolbar>
+  <span [routerLink]="['home']" >Booking</span>
+  <div>
+    <button [routerLink]="['login']" style="float: right" mat-raised-button >Login</button>
+    <button [routerLink]="['signup']"  style="float: right" mat-raised-button >Signup</button>
+  </div>
+</mat-toolbar>
