finish component for search, nav and accomodation details with router

--- a/ProjectIKS/src/app/modules/accommodations/accommodation-card/accommodation-card.component.html
+++ b/ProjectIKS/src/app/modules/accommodations/accommodation-card/accommodation-card.component.html
@@ -6,8 +6,8 @@
     </div>
 
     <div fxFlex="70%" fxLayout="column" fxLayoutGap="10px">
-      <b class = "b-description" >
-        {{accommodation.description}}
+      <b class = "b-description" style="color:#4b4f4d">
+        Apartman
       </b>
       <p class="p-description">{{accommodation.description}}</p>
     </div>
