--- a/ProjectIKS/src/app/modules/unregistered-user/unregistered-user-home/unregistered-user-home.component.html
+++ b/ProjectIKS/src/app/modules/unregistered-user/unregistered-user-home/unregistered-user-home.component.html
@@ -1,3 +1,3 @@
 <app-navbar role="user"></app-navbar>
-<!--<app-search></app-search>-->
+<app-search></app-search>
 <app-accommodation-cards></app-accommodation-cards>
