--- a/ProjectIKS/src/app/modules/accommodations/accommodation-card/accommodation-card.component.html
+++ b/ProjectIKS/src/app/modules/accommodations/accommodation-card/accommodation-card.component.html
@@ -1,6 +1,6 @@
 <mat-card style="border-radius: 20px">
   <mat-card-content >
-    <div fxLayout="row" [routerLink]="['/home', accommodation.id]" >
+    <div fxLayout="row" (click)="toDetails(accommodation.id)" >
       <div fxFlex="30%">
         <img src="assets/images/city.png" alt="Slika smeštaja" style="width: 100%; height: auto; padding: 10px; border-radius: 20px;">
       </div>
