--- a/ProjectIKS/src/app/modules/accommodations/accommodation-cards/accommodation-cards.component.html
+++ b/ProjectIKS/src/app/modules/accommodations/accommodation-cards/accommodation-cards.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let accommodation of accommodations" style="margin-left: 5%; margin-right: 5%;" >
-  <app-accommodation-card [accommodation]="accommodation"></app-accommodation-card>
+  <app-accommodation-card (clicked)="onAccommodationClicked($event)" [accommodation]="accommodation"></app-accommodation-card>
 </div>
