--- a/ProjectIKS/src/app/modules/layout/search/search.component.html
+++ b/ProjectIKS/src/app/modules/layout/search/search.component.html
@@ -1,16 +1,19 @@
-
-<mat-toolbar style = "display: flex; justify-content: center; margin-bottom: 30px; height: 150px">
-  <form class="cities-form">
-    <input  id="city-input" type="text"
-            placeholder="City"
-            matInput
-            [formControl]="myControl"
-            [matAutocomplete]="auto">
+<mat-toolbar style = "display: flex; justify-content: center; margin-bottom: 30px; height: 150px;margin-right: 50px">
+  <form  [formGroup]="citiesForm" class="cities-form">
+    <input style="margin-right:50px;height: 40px" id="city-input" type="text"
+           placeholder="City"
+           matInput
+           [formControl]="myControl"
+           [matAutocomplete]="auto">
     <mat-autocomplete #auto="matAutocomplete">
       <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
         {{ option }}
       </mat-option>
     </mat-autocomplete>
+
+    <mat-form-field>
+      <input matInput type="number" placeholder="Add number guests" min="0">
+    </mat-form-field>
   </form>
 
   <mat-form-field>
@@ -23,11 +26,6 @@
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-date-range-picker #picker></mat-date-range-picker>
   </mat-form-field>
-
   <mat-date-range-picker #picker></mat-date-range-picker>
-  <mat-form-field>
-    <input matInput type="number" formControlName="phoneNumber" placeholder="Add number guests" min="0">
-  </mat-form-field>
-  <button mat-raised-button color="primary" >Select</button>
+  <button mat-raised-button color="primary" (click)="selectClicked()" style="height:50px; margin-bottom: 20px" >Select</button>
 </mat-toolbar>
-
