little edit with gui, added photo in details and add backend data

--- a/ProjectIKS/src/app/modules/accommodations/accommodation-card/accommodation-card.component.html
+++ b/ProjectIKS/src/app/modules/accommodations/accommodation-card/accommodation-card.component.html
@@ -1,16 +1,16 @@
 <mat-card style="border-radius: 20px">
-<mat-card-content >
-  <div fxLayout="row" [routerLink]="['/home', accommodation.id]" >
-    <div fxFlex="30%">
-      <img src="assets/images/city.png" alt="Slika smeštaja" style="width: 100%; height: auto; padding: 10px; border-radius: 20px;">
-    </div>
+  <mat-card-content >
+    <div fxLayout="row" (click)="toDetails(accommodation.id)" >
+      <div fxFlex="30%">
+        <img src="assets/images/city.png" alt="Slika smeštaja" style="width: 100%; height: auto; padding: 10px; border-radius: 20px;">
+      </div>
 
-    <div fxFlex="70%" fxLayout="column" fxLayoutGap="10px">
-      <b class = "b-description" style="color:#4b4f4d">
-        Apartman
-      </b>
-      <p class="p-description">{{accommodation.description}}</p>
+      <div fxFlex="70%" fxLayout="column" fxLayoutGap="10px">
+        <b class = "b-description" style="color:#4b4f4d">
+          Apartman
+        </b>
+        <p class="p-description">{{accommodation.description}}</p>
+      </div>
     </div>
-  </div>
-</mat-card-content>
+  </mat-card-content>
 </mat-card>
