--- a/ProjectIKS/src/app/modules/layout/unregistered-user-navbar/unregistered-user-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/unregistered-user-navbar/unregistered-user-navbar.component.html
@@ -3,6 +3,6 @@
   <div>
     <button (click)="toLogin()" style="float: right" mat-raised-button >Login</button>
     <button (click)="toSignup()"  style="float: right" mat-raised-button >Signup</button>
+    <button (click)="toEditAccount()" style="float: right" mat-raised-button>Profile</button>
   </div>
 </mat-toolbar>
-
