Added mockup data for account management

--- a/ProjectIKS/src/app/modules/accommodations/accommodation-details/accommodation-details.component.html
+++ b/ProjectIKS/src/app/modules/accommodations/accommodation-details/accommodation-details.component.html
@@ -2,24 +2,27 @@
 <div class="details-accommodation-container">
   <div class="details-accommodation-details">
     <p>Describe: {{accommodation.description}}</p>
-    <p>Type:</p>
+    <p>Type: Apartment</p>
     <p>Minimum people: {{accommodation.minPeople}}</p>
     <p>Maximum people: {{accommodation.maxPeople}}</p>
-    <p>Owner: </p>
+    <p>Owner: Luka Popovic</p>
   </div>
 
   <p style="font-size: 20px;font-family: 'Adobe Fangsong Std R'">Location</p>
   <div class="details-accommodation-details" style="height: 150px;margin-bottom: 30px">
-    <p>City:</p>
-    <p>Address: </p>
-    <p>Street</p>
+    <p>City: Novi Sad</p>
+    <p>Street: Gunuliceva </p>
+    <p>Number: 21</p>
+  </div>
+  <div class="details-accommodation-details" style="height: 200px; margin-bottom: 30px">
+    <img src="assets/images/city.png" alt="Slika smeštaja" style="width:60%; display: block; margin: auto; height: 180px; padding: 10px; border-radius: 20px;">
   </div>
   <p style="font-size: 20px;font-family: 'Adobe Fangsong Std R'">Rating Accommodation</p>
 
   <mat-progress-bar mode="determinate" value="40"></mat-progress-bar>
   <div class="details-accommodation-details" style="height: 150px;margin-bottom: 30px; background-color: aquamarine">
-    <p>Guest:</p>
-    <p>Comment: </p>
-    <p>Rate: </p>
+    <p>Guest: Matija Popovic</p>
+    <p>Comment: Ok</p>
+    <p>Rate: 4</p>
   </div>
 </div>
