--- a/ProjectIKS/src/app/modules/layout/guest-navbar/guest-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/guest-navbar/guest-navbar.component.html
@@ -1,10 +1,11 @@
 <mat-toolbar>
-  <span [routerLink]="['/guests']" >Booking</span>
+  <span (click)="toHome()" >Booking</span>
   <div>
     <button [routerLink]="['']"  style="float: right" mat-raised-button >Profile</button>
     <button [routerLink]="['']"  style="float: right" mat-raised-button >Reservations</button>
     <button [routerLink]="['']"  style="float: right" mat-raised-button >Notifications</button>
-    <button [routerLink]="['home']" style="float: right" mat-raised-button >Logout</button>
+    <button (click)="viewReviews()"  style="float: right" mat-raised-button >Reviews</button>
+    <button (click)="Logout()" style="float: right" mat-raised-button >Logout</button>
 
   </div>
 </mat-toolbar>
