--- a/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
@@ -1,9 +1,5 @@
-<<<<<<< HEAD
-
-=======
->>>>>>> matija
 <mat-toolbar>
-  <span [routerLink]="['/guests']" >Booking</span>
+  <span [routerLink]="['/owners/accommodations']" >Booking</span>
   <div>
     <button [routerLink]="['']"  style="float: right" mat-raised-button >Profile</button>
     <button [routerLink]="['']"  style="float: right" mat-raised-button >Reservations</button>
@@ -12,7 +8,3 @@
 
   </div>
 </mat-toolbar>
-<<<<<<< HEAD
-=======
-
->>>>>>> matija
