--- a/ProjectIKS/src/app/modules/layout/search/search.component.css
+++ b/ProjectIKS/src/app/modules/layout/search/search.component.css
@@ -18,3 +18,18 @@ mat-form-field{
   margin-right: 50px;
 
 }
+
+.example-section {
+  margin: 12px 0;
+}
+
+.example-margin {
+  margin: 0 12px;
+}
+
+ul {
+  list-style-type: none;
+  margin-top: 4px;
+}
+
+
