--- a/ProjectIKS/src/app/modules/layout/administrator-navbar/administrator-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/administrator-navbar/administrator-navbar.component.html
@@ -4,7 +4,7 @@
     <button style="float: right" mat-raised-button >Profile</button>
     <button style="float: right" mat-raised-button >Reservations</button>
     <button  style="float: right" mat-raised-button >Notifications</button>
-    <button  style="float: right" mat-raised-button >Logout</button>
+    <button  (click)="Logout()" style="float: right" mat-raised-button >Logout</button>
   </div>
 </mat-toolbar>
 
