--- a/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
@@ -1,10 +1,6 @@
 <mat-toolbar>
   <span >Booking</span>
   <div>
-    <button style="float: right" mat-raised-button >Profile</button>
-    <button style="float: right" mat-raised-button >Reservations</button>
-    <button style="float: right" mat-raised-button >Notifications</button>
-    <button style="float: right" mat-raised-button >Logout</button>
-
+    <button (click)="Logout()" style="float: right" mat-raised-button >Logout</button>
   </div>
 </mat-toolbar>
