Implemented jwt security and validations for account management for every role

--- a/ProjectIKS/src/app/modules/layout/guest-navbar/guest-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/guest-navbar/guest-navbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <span (click)="toHome()" >Booking</span>
   <div>
-    <button [routerLink]="['']"  style="float: right" mat-raised-button >Profile</button>
+   <button [routerLink]="['/edit-profile']"  style="float: right" mat-raised-button >Profile</button>
     <button [routerLink]="['']"  style="float: right" mat-raised-button >Reservations</button>
     <button [routerLink]="['']"  style="float: right" mat-raised-button >Notifications</button>
     <button (click)="viewReviews()"  style="float: right" mat-raised-button >Reviews</button>
