--- a/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
@@ -2,5 +2,6 @@
   <span >Booking</span>
   <div>
     <button (click)="Logout()" style="float: right" mat-raised-button >Logout</button>
+    <button [routerLink]="['/edit-profile']"  style="float: right" mat-raised-button >Profile</button>
   </div>
 </mat-toolbar>
